--- a/index.html
+++ b/index.html
@@ -848,6 +848,6 @@
         <div style="text-align: center;">© Bach Nien Gia 2021 All rights reserved. Powered with by Diwe.vn</div>
     </div>
 </body>
-<script src="./trangchu.js"></script>
+<!-- <script src="./trangchu.js"></script> -->
 
 </html>
